--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Nunito Sans', sans-serif;
 }
 
-#header, #footer a {
+#header, #footer a, #footer div {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -35,14 +35,19 @@ body {
 }
 
 #footer a {
-  /* font-weight: bold; */
+  margin: 0 1em;
   color: lightgray;
   text-decoration: none;
+  transition: opacity 0.5s ease;
+}
+
+#footer a:hover {
+  opacity: 0.5;
 }
 
 .container {
-  background-color: #fafafa;
-  border: 1px solid lightgray;
+  background-color: #fdfdfd;
+  border: 1px solid #e0e0e0;
   border-radius: 5px;
   margin: 0 5vw;
   /* TEMP BELOW, REMOVE */
