--- a/index.css
+++ b/index.css
@@ -117,6 +117,11 @@ p {
   padding: 5vmin 5vmin;
 }
 
+#icons {
+  padding: 0 !important;
+  margin-left: 2vw;
+}
+
 .icon {
   height: 2em;
   width: 2em;
@@ -126,7 +131,17 @@ p {
   display: flex;
   flex-direction: row;
   align-items: center;
+  transition: transform 0.5s ease, opacity 0.5s ease;
   padding: 0 !important;
+}
+
+.icon-container:hover {
+  transform: scale(1.2);
+}
+
+#icons:hover .icon-container:not(:hover) {
+  transform: scale(0.9);
+  opacity: 0.5;
 }
 
 /* FOOD ITEM STYLES */
@@ -210,17 +225,19 @@ p {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #e5e5e5;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset; 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: var(--main-color);
+  border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #c58f24;
 }
 
 .hidden {
@@ -255,6 +272,7 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0 2em;
+    margin: 0;
   }
 
   #scan-btn {
