--- a/index.css
+++ b/index.css
@@ -175,7 +175,7 @@ p {
   flex-direction: row;
   align-items: center;
   color: var(--color);
-  margin: 0;
+  margin: 0 0 0 -6px;
   min-width: 10em;
 }
 
@@ -345,14 +345,11 @@ a:hover {
 @media screen and (max-width: 1024px) {
   .food-name {
     font-size: 22px;
+    margin: 0;
   }
 
   .food-duration::after {
     font-size: 14px;
-  }
-
-  .food-duration {
-    /* width: min(calc(var(--length) * 15%), 100%); */
   }
 
   .food-item {
