--- a/index.css
+++ b/index.css
@@ -61,12 +61,15 @@ button {
   right: 0;
   bottom: 0;
   background-color: white;
-  visibility: hidden;
+  border-radius: 5px;
+  border: 1px solid black;
   opacity: 0;
-  transition: opacity 0.5s ease, visibility 0.5s ease;
+  visibility: hidden;
+  transition: opacity 0.75s ease, visibility 0.75s ease, border 0.75s ease;
 }
 
 #demo.shown {
+  border: 1px solid white;
   visibility: visible;
   opacity: 1;
 }
