--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: 'Quicksand', sans-serif;
@@ -149,6 +153,7 @@ p {
 
 .footer-icon {
   filter: grayscale(1);
+  opacity: 0.5;
   height: 1em;
   margin: 0 0.5em;
 }
