--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-html {
+html, body {
   scroll-behavior: smooth;
 }
 
@@ -90,10 +90,6 @@ button {
   max-height: min(300px, 20vmin);
   max-width: min(300px, 20vmin);
   margin-right: 10px;
-}
-
-p {
-  max-width: 60em;
 }
 
 .hr {
