--- a/index.css
+++ b/index.css
@@ -513,6 +513,10 @@ a:hover {
     padding: 0 0;
   }
 
+  #description h1 {
+    margin: 0;
+  }
+
   .food-name, .recipe-name {
     font-size: 22px;
     margin: 0;
@@ -547,6 +551,18 @@ a:hover {
 }
 
 @media screen and (max-width: 768px) {
+  #description {
+    padding: 0.5em 0 0 0;
+  }
+
+  #description > div {
+    padding: 8px;
+  }
+
+  button {
+    margin-bottom: 2px;
+  }
+
   .mobile-version {
     display: flex;
   }
@@ -607,9 +623,5 @@ a:hover {
     margin-right: 3px;
     max-width: min(300px, 20vmin);
     max-height: 125px;
-  }
-
-  button {
-    margin-bottom: 6px;
   }
 }
