--- a/index.css
+++ b/index.css
@@ -118,6 +118,16 @@ button {
   position: absolute;
 }
 
+#foods-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  z-index: -1;
+  pointer-events: none;
+}
+
 #demo-grid {
   display: grid; 
   grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
@@ -150,7 +160,7 @@ button {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: white;
+  /* background-color: white; */
   border-radius: 5px;
   border: 1px solid black;
   opacity: 0;
@@ -159,7 +169,7 @@ button {
 }
 
 #demo.shown {
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0);
   visibility: visible;
   opacity: 1;
   padding-bottom: min(25px, 5vmin);
@@ -170,6 +180,17 @@ button {
   max-height: min(300px, 20vmin);
   max-width: min(300px, 30vmin);
   margin-right: 10px;
+}
+
+.show-more-section {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.75s ease;
+}
+
+.show-more-section.shown {
+  opacity: 1;
+  pointer-events: all;
 }
 
 .hr {
